src/objects/Income_Targeting__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SDHC Public Housing ELI</fullName>
                </value>
                <value>
                    <fullName>100% of AMI</fullName>
                </value>
                <value>
                    <fullName>SDHC Public Housing LI</fullName>
                </value>
                <value>
                    <fullName>SDHC Public Housing VLI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Housed__c</fullName>
        <label># Housed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>In_Process__c</fullName>
        <label># In Process</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Income_Limit__c</fullName>
        <label>Income Limit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>eli-30</fullName>
                </value>
                <value>
                    <fullName>vli-50</fullName>
                </value>
                <value>
                    <fullName>li-80</fullName>
                </value>
                <value>
                    <fullName>full-ami</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lease_Up__c</fullName>
        <label>% Lease Up</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Met__c</fullName>
        <label>% Met</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Points_Weight__c</fullName>
        <label>Points/ Weight</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rejected__c</fullName>
        <label># Rejected</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reqd__c</fullName>
        <label>Reqd. %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Selected__c</fullName>
        <label># Selected</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Wait_List_Type__c</fullName>
        <label>Wait List Type</label>
        <referenceTo>Wait_List_Type__c</referenceTo>
        <relationshipLabel>Income Targetings</relationshipLabel>
        <relationshipName>Income_Targetings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Income Targeting</label>
    <nameField>
        <displayFormat>IT-{0000}</displayFormat>
        <label>Income Targeting ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Income Targetings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>